objects/User_Email_Address_Table__c.object
<CustomObject>
    <description>Data for users who want to have multiple Email From Address for Cases</description>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_User_Name__c</fullName>
        <description>Name that will show up on the &apos;From&apos; Address: 
Should have   &quot;FirstName LastName&quot; For &quot;FirstName LastName &lt;firstName@cadence.com&gt;&quot;</description>
        <label>Email User Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Email_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Email Address Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email_User_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Default__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_User_Name__c</field>
            <operation>contains</operation>
            <value>suman</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Email_User_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Dheerajkumar M Valivade</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UEA-{000000}</displayFormat>
        <label>User Email Addresses Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Email Address Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>